fix: update projectLink background color for improved visibility

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -267,7 +267,7 @@
 
 .projectLink {
   padding: 10px 30px 10px 30px;
-  background-color: #faa0d2;
+  background-color: #ff55b3;
   border-radius: 23px;
   font-weight: 700;
   box-shadow: 0px 4px 23px 0px rgba(0, 0, 0, 0.25);
@@ -284,12 +284,4 @@
   .techInfo {
     font-size: 14px;
   }
-}
-
-/* Carousel fix for Ant Design */
-.ant-carousel .slick-slide {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
 }
